 /* $Id: ChangeLog,v 1.918 2000-04-30 17:05:13 sandervl Exp $ */

 2000-04-30: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: LocalFlags fix (low byte = lock count, hight byte (of low word) = memory flags)
                    LocalGetFlags, LocalLock & LocalUnlock now check if the
                    pointer is larger than 3 GB. Some apps calls these functions
                    with GDI object handles.
	- OLEAUT32: Don't create logfiles in release build

 2000-04-29: Yuri Dario <mc6530@mclink.it>
	- USER32:   Bugfix for owner of windows (set to owner instead of parent now)

 2000-04-29: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32/KERNEL32: Added selectable logging for level 2 dprintfs.

	- USER32:   Commented out default x & y position code
                    (FCF_SHELLPOSITION no longer works)
                    -> fixes menu & toolbars in MS Word 97

	- KERNEL32: Added windows directory override again
                    (NOTE: for developers *ONLY*; DO NOT USE IT)
                    [DEVDIRECTORIES]
                    WINDOWS=drive:\path
                    Default System directory is kernel32 path
                    (with new install program: x:\odin\system32)
                    Default Windows directory is parent of System Directory
                    (with new install program: x:\odin)
		    NOTE: This assumption could break current installs
                          Will be fixed in upcoming WarpIn installation distributions

                    Changed InitSystemAndRegistry:
  		    InitSystemAndRegistry creates:
			- WINDOWSDIR\SYSTEM
		        - WINDOWSDIR\AppData
		        - WINDOWSDIR\Cache
		        - WINDOWSDIR\Cookies
		 	- WINDOWSDIR\Desktop
		 	- WINDOWSDIR\Favorites
		 	- WINDOWSDIR\Fonts
		        - WINDOWSDIR\History
		 	- WINDOWSDIR\NetHood
		 	- WINDOWSDIR\My Documents
		 	- WINDOWSDIR\PrintHood
		 	- WINDOWSDIR\Recent
		 	- WINDOWSDIR\SendTo
		 	- WINDOWSDIR\Start Menu
		 	- WINDOWSDIR\Start Menu\Programs